1999-01-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Map.m (hdf5_store_compare_function_attribute): New function.
	([Map_c hdf5OutDeep:], [Map_c hdf5OutShallow:]): Use it.
	([Map_c hdf5In:]): Implement shallow loading.

	* List.[hm]: Move HDF5 stuff from Collections.

	* List.[hm], Map.[hm], StringObject.[hm]: Switch from
	{lisp,hdf5}Out:deep: to
	{lisp,hdf5}Out{Shallow,Deep}:.

	* Map.m ([Map_c hdf5Out:deep]): Don't compute anything for call
	to -setRowNameLength: and don't call it.
	([Map_c -hdf5InCreate:]): New method.
	(setCompareFunctionByName): New function.
	([Map_c -lispInCreate:], [Map_c -hdf5InCreate:]): Use it.
	([Map_c -hdf5Out:deep:]): Check compareFunc before checking
	if key is a string (an object).
	([Map_c -hdf5In:]): Implement deep loading and shallow/deep keys.

	* List.m ([List_any -hdf5In:]): New method.
	
	* Array.[hm], collections.h ([Array_c -setCount:]): Return self.

	* Collection.m, Map.m ([... hdf5Out:deep:]): For dataset,
	set compoundType and count separately.

1999-01-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.m, Map.m ([... hdf5Out:deep:]): Set componentType
	from member prototype.

1999-01-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.m, Map.m, String.m (hdf5Out:deep:): 
	Use setClass: instead of setSourceClass: and setCompoundType:count:
	instead of setRecordType:count: (renames).
	Call writeRowNames:.

	* Map.m ([... hdf5Out:deep:]): Set typeName to Map member
	type, not Map. 

	* Collection.m, Map.m, String.m ([... hdf5Out:deep:]): Use
	getTypeName instead of name.  

	* Map.m ([Map_c -lispOut:deep:]): Likewise.

	* List.m ([List_any -lispOut:deep:]): Likewise.

	* StringObject.m ([String_c -lispOut:deep:]): Use getTypeName
	instead of literal String.

1999-01-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.m, Map.m ([... hdf5Out:deep:]): Set createFlag.
	
1999-01-15  Marcus G. Daniels  <mgd@chama.santafe.edu>
